--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,6 @@
-<<<<<<< HEAD
-streamlit
+streamlit==1.33.0
 pandas
 numpy
 scikit-learn
 plotly
-=======
-streamlit
-pandas
-numpy
-scikit-learn
-plotly
->>>>>>> 06aa7a528b9009d590d1ec95f375685efe787dfd
+rich<14
